--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,16 +28,13 @@ jobs:
         id: get_remote_name
         run: |
           remote_url=$(curl -sS "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.number }}" | jq -r '.head.repo.git_url')
-          echo "Github vars: ${{ github.repository }}/pulls/${{ github.event.number }}"
-          echo "Remote URL: $remote_url"
-          exit 1
           echo "::set-output name=remote_url::$remote_url"
         shell: bash
 
       - name: Check for Merge Conflicts
         id: check_merge_conflicts
         run: |
-          git fetch ${{ steps.get_remote_name.outputs.remote_name }} ${{ github.head_ref }}
+          git fetch ${{ steps.get_remote_name.outputs.remote_url }} ${{ github.head_ref }}
           git checkout ${{ github.head_ref }}
           if ! git merge --ff-only --no-commit ${{ github.base_ref }}; then
             echo "::set-output name=conflicts::true"
@@ -54,7 +51,7 @@ jobs:
       - name: Push Changes
         if: success() && steps.check_merge_conflicts.outputs.conflicts == 'false'
         run: |
-          git push ${{ steps.get_remote_name.outputs.remote_name }} ${{ github.head_ref }}
+          git push ${{ steps.get_remote_name.outputs.remote_url }} ${{ github.head_ref }}
 
   docs:
     runs-on: ubuntu-latest
