--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
         run: |
           git fetch ${{ steps.get_remote_name.outputs.remote_url }} ${{ github.head_ref }}
           echo "${{ steps.get_remote_name.outputs.remote_url }}/${{ github.head_ref }}"
-          echo "git branch -a"
+          echo $(git branch -a)
           git checkout ${{ github.head_ref }}
           if ! git merge --ff-only --no-commit ${{ github.base_ref }}; then
             echo "::set-output name=conflicts::true"
