--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,27 +27,23 @@ jobs:
       - name: Get Remote Name
         id: get_remote_name
         run: |
-          remote_url=$(curl -sS "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.number }}" | jq -r '.head.repo.html_url')
-          echo "::set-output name=remote_url::$remote_url"
+          remote=$(curl -sS "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.number }}" | jq -r '.head.repo.full_name')
+          echo "::set-output name=remote_url::$remote"
 
       - name: Checkout Pull Request Branch
         uses: actions/checkout@v2
         with:
-          repository: ${{ steps.get_remote_name.outputs.remote_url }}
+          repository: ${{ steps.get_remote_name.outputs.remote }}
           ref: ${{ github.head_ref }}
           shell: bash
 
       - name: Merge if no Conflicts
         id: check_merge_conflicts
         run: |
-          git fetch ${{ steps.get_remote_name.outputs.remote_url }} ${{ github.head_ref }}
-          echo "${{ steps.get_remote_name.outputs.remote_url }}/${{ github.head_ref }}"
-          echo $(git branch -a)
-          git checkout ${{ github.head_ref }}
           if git merge --ff-only --no-commit ${{ github.base_ref }}; then
             git merge --ff-only ${{ github.base_ref }}
             git commit -m "Merge branch '${{ github.base_ref }}' into '${{ github.head_ref }}'"
-            git push ${{ steps.get_remote_name.outputs.remote_url }} HEAD:${{ github.head_ref }}
+            git push ${{ steps.get_remote_name.outputs.remote }} HEAD:${{ github.head_ref }}
           fi
         shell: bash
 
