--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,8 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: chinthakagodawita/autoupdate@v1.7.0
-        with:
-          GITHUB_TOKEN: '${{ secrets.AUTOUPDATE }}'
+        env:
+          GITHUB_TOKEN: "${{ secrets.AUTOUPDATE }}"
 
   docs:
     runs-on: ubuntu-latest
