--- a/crates/ordinals/Cargo.toml
+++ b/crates/ordinals/Cargo.toml
@@ -14,6 +14,7 @@ derive_more = "0.99.17"
 serde = { version = "1.0.137", features = ["derive"] }
 serde_with = "3.7.0"
 thiserror = "1.0.56"
+rand = "0.8.5"
 
 [dev-dependencies]
 serde_json = { version = "1.0.81", features = ["preserve_order"] }
