--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,9 +67,10 @@ sysinfo = "0.30.3"
 tempfile = "3.2.0"
 tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
 tokio-stream = "0.1.9"
-tokio-util = {version = "0.7.3", features = ["compat"] }
+tokio-util = { version = "0.7.3", features = ["compat"] }
 tower-http = { version = "0.4.0", features = ["auth", "compression-br", "compression-gzip", "cors", "set-header"] }
 urlencoding = "2.1.3"
+hdrhistogram = "7.5.4"
 
 [dev-dependencies]
 criterion = "0.5.1"
