--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ord"
 description = "◉ Ordinal wallet and block explorer"
-version = "0.19.0-dev"
+version = "0.19.0"
 license = "CC0-1.0"
 edition = "2021"
 autotests = false
@@ -23,11 +23,10 @@ async-trait = "0.1.72"
 axum = { version = "0.6.1", features = ["http2"] }
 axum-server = "0.5.0"
 base64 = "0.22.0"
-bech32 = "0.11.0"
 bip39 = "2.0.0"
 bitcoin = { version = "0.30.1", features = ["rand"] }
 boilerplate = { version = "1.0.0", features = ["axum"] }
-brotli = "5.0.0"
+brotli = "6.0.0"
 chrono = { version = "0.4.19", features = ["serde"] }
 ciborium = "0.2.1"
 clap = { version = "4.4.2", features = ["derive"] }
@@ -49,7 +48,7 @@ mime_guess = "2.0.4"
 miniscript = "10.0.0"
 mp4 = "0.14.0"
 ord-bitcoincore-rpc = "0.17.2"
-ordinals = { version = "0.0.8", path = "crates/ordinals" }
+ordinals = { version = "0.0.9", path = "crates/ordinals" }
 redb = "2.0.0"
 regex = "1.6.0"
 reqwest = { version = "0.11.23", features = ["blocking", "json"] }
@@ -75,7 +74,7 @@ urlencoding = "2.1.3"
 [dev-dependencies]
 criterion = "0.5.1"
 executable-path = "1.0.0"
-nix = { version = "0.28.0", features = ["signal"] }
+nix = { version = "0.29.0", features = ["signal"] }
 pretty_assertions = "1.2.1"
 reqwest = { version = "0.11.10", features = ["blocking", "brotli", "json"] }
 mockcore = { path = "crates/mockcore" }
@@ -92,6 +91,3 @@ path = "src/lib.rs"
 [[test]]
 name = "integration"
 path = "tests/lib.rs"
-
-[build-dependencies]
-pulldown-cmark = "0.10.0"
