--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ tokio-util = { version = "0.7.3", features = ["compat"] }
 tower-http = { version = "0.4.0", features = ["auth", "compression-br", "compression-gzip", "cors", "set-header"] }
 urlencoding = "2.1.3"
 hdrhistogram = "7.5.4"
+bcs = "0.1.6"
 
 [dev-dependencies]
 criterion = "0.5.1"
