--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ord"
 description = "◉ Ordinal wallet and block explorer"
-version = "0.20.0-dev"
+version = "0.20.0"
 license = "CC0-1.0"
 edition = "2021"
 autotests = false
@@ -64,7 +64,7 @@ serde_with = "3.7.0"
 serde_yaml = "0.9.17"
 sha3 = "0.10.8"
 snafu = "0.8.3"
-sysinfo = "0.30.3"
+sysinfo = "0.31.0"
 tempfile = "3.2.0"
 tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
 tokio-stream = "0.1.9"
