--- a/deploy-ord-dev/bitcoind.service
+++ b/deploy-ord-dev/bitcoind.service
@@ -4,9 +4,8 @@ After=network-online.target
 Wants=network-online.target
 
 [Service]
-ExecStart=/home/linuxbrew/.linuxbrew/opt/bitcoin/bin/bitcoind -daemon -conf=/home/ord-dev/bitcoin/bitcoin.conf
+ExecStart=/home/linuxbrew/.linuxbrew/opt/bitcoin/bin/bitcoind
 User=ord-dev
-Group=ord-dev
 Restart=on-failure
 Type=simple
 
