--- a/deploy/ord.service
+++ b/deploy/ord.service
@@ -18,9 +18,7 @@ ExecStart=/usr/local/bin/ord \
   --index-runes \
   --index-sats \
   server \
-  --acme-contact mailto:lifo@hey.com \
-  --csp-origin https://${CSP_ORIGIN} \
-  --http \
+  --csp-origin https://${CSP_ORIGIN}
 Group=ord
 LimitNOFILE=65536
 MemoryDenyWriteExecute=true
