--- a/deploy/bitcoin.conf
+++ b/deploy/bitcoin.conf
@@ -1,9 +1,13 @@
 datacarriersize=1000000
 datadir=/var/lib/bitcoind
+
 maxmempool=1024
 mempoolfullrbf=1
+dbcache=2048
+
 txindex=1
 disablewallet=1
+
 rpcservertimeout=3600
-rpcthreads=32
-rpcworkqueue=128
+rpcthreads=128
+rpcworkqueue=512
