Add tor settings

--- a/deploy/bitcoin.conf
+++ b/deploy/bitcoin.conf
@@ -11,3 +11,12 @@ disablewallet=1
 rpcservertimeout=3600
 rpcthreads=128
 rpcworkqueue=512
+
+dns=0
+dnsseed=0
+listen=1
+logips=1
+
+proxy=127.0.0.1:9050
+onlynet=onion
+debug=tor
