--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ord"
 description = "◉ Ordinal wallet and block explorer"
-version = "0.20.0-dev"
+version = "0.20.1"
 license = "CC0-1.0"
 edition = "2021"
 autotests = false
