--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ async-trait = "0.1.72"
 axum = { version = "0.6.1", features = ["http2"] }
 axum-server = "0.5.0"
 base64 = "0.22.0"
+bip322 = "0.0.7"
 bip39 = "2.0.0"
 bitcoin = { version = "0.30.1", features = ["rand"] }
 boilerplate = { version = "1.0.0", features = ["axum"] }
