--- a/crates/mockcore/Cargo.toml
+++ b/crates/mockcore/Cargo.toml
@@ -8,13 +8,14 @@ homepage = "https://github.com/ordinals/ord"
 repository = "https://github.com/ordinals/ord"
 
 [dependencies]
-bitcoin = { version = "0.30.0", features = ["serde", "rand"] }
+bitcoin = { version = "0.31.2", features = ["serde", "rand"] }
 base64 = "0.22.0"
 hex = "0.4.3"
 jsonrpc-core = "18.0.0"
 jsonrpc-derive = "18.0.0"
 jsonrpc-http-server = "18.0.0"
-ord-bitcoincore-rpc = "0.17.2"
+# bitcoincore-rpc = "0.18.0"
+bitcoincore-rpc = { path = "../../../rust-bitcoincore-rpc/client" }
 reqwest = { version = "0.12.8", features = ["blocking"] }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = { version = "1.0.81" }
