--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,10 @@ axum-server = "0.5.0"
 base64 = "0.22.0"
 bip322 = "0.0.7"
 bip39 = "2.0.0"
-bitcoin = { version = "0.31.2", features = ["rand"] }
-bitcoincore-rpc = "0.18.0"
+bitcoin = { version = "0.32.3", features = ["rand"] }
+bitcoin-io = { version = "0.1.2", features = ["std"] }
+bitcoin-units = "0.1.2"
+bitcoincore-rpc = "0.19.0"
 boilerplate = { version = "1.0.0", features = ["axum"] }
 brotli = "7.0.0"
 chrono = { version = "0.4.19", features = ["serde"] }
@@ -47,7 +49,7 @@ lazy_static = "1.4.0"
 log = "0.4.14"
 mime = "0.3.16"
 mime_guess = "2.0.4"
-miniscript = "11.0.0"
+miniscript = "12.0.0"
 mp4 = "0.14.0"
 ordinals = { version = "0.0.11", path = "crates/ordinals" }
 redb = "2.1.1"
