--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ mime_guess = "2.0.4"
 miniscript = "12.0.0"
 mp4 = "0.14.0"
 ordinals = { version = "0.0.11", path = "crates/ordinals" }
-redb = "2.1.1"
+redb = "=2.1.3"
 ref-cast = "1.0.23"
 regex = "1.6.0"
 reqwest = { version = "0.11.27", features = ["blocking", "json"] }
