--- a/deploy/ord.service
+++ b/deploy/ord.service
@@ -13,6 +13,7 @@ ExecStart=/usr/local/bin/ord \
   --chain ${CHAIN} \
   --config-dir /var/lib/ord \
   --datadir /var/lib/ord \
+  --http-port 8080 \
   --commit-interval 100 \
   --index-addresses \
   --index-runes \
