--- a/deploy/ord.service
+++ b/deploy/ord.service
@@ -17,11 +17,11 @@ ExecStart=/usr/local/bin/ord \
   --index-runes \
   --index-sats \
   server \
+  ${DISABLE_JSON_API}
   --acme-contact mailto:casey@rodarmor.com \
   --csp-origin https://${CSP_ORIGIN} \
   --http \
-  --https \
-  --disable-json-api
+  --https
 Group=ord
 LimitNOFILE=65536
 MemoryDenyWriteExecute=true
