--- a/deploy/ord.service
+++ b/deploy/ord.service
@@ -21,7 +21,7 @@ ExecStart=/usr/local/bin/ord \
   --csp-origin https://${CSP_ORIGIN} \
   --http \
   --https \
-  ${DISABLE_JSON_API} \
+  ${DISABLE_JSON_API:-\n}
 Group=ord
 LimitNOFILE=65536
 MemoryDenyWriteExecute=true
