--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,9 +42,9 @@ tempfile = "3.2.0"
 
 [dependencies]
 anyhow = { version = "1.0.90", features = ["backtrace"] }
-async-trait = "0.1.72"
-axum = { version = "0.6.1", features = ["http2"] }
-axum-server = "0.5.0"
+# async-trait = "0.1.72"
+axum = { version = "0.8.1", features = ["http2"] }
+axum-server = "0.7.1"
 base64.workspace = true
 bip322 = "0.0.9"
 bip39 = "2.0.0"
@@ -62,9 +62,10 @@ env_logger = "0.11.0"
 futures = "0.3.21"
 hex.workspace = true
 html-escaper = "0.2.0"
-http = "0.2.6"
+http = "1.2.0"
 humantime = "2.1.0"
-hyper = { version = "0.14.24", features = ["client", "http2"] }
+hyper = { version = "1.5.2", features = ["client", "http2"] }
+hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http2", "tokio"] }
 indicatif = "0.17.1"
 lazy_static = "1.4.0"
 log = "0.4.14"
@@ -79,8 +80,8 @@ regex.workspace = true
 reqwest.workspace = true
 rss = "2.0.1"
 rust-embed = "8.0.0"
-rustls = "0.22.0"
-rustls-acme = { version = "0.8.1", features = ["axum"] }
+rustls = "0.23.20"
+rustls-acme = { version = "0.12.1", features = ["axum"] }
 serde-hex = "0.1.0"
 serde.workspace = true
 serde_json.workspace = true
@@ -90,11 +91,13 @@ sha3 = "0.10.8"
 snafu = "0.8.3"
 sysinfo = "0.33.0"
 tempfile.workspace = true
-tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
+tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
 tokio-stream = "0.1.9"
 tokio-util = {version = "0.7.3", features = ["compat"] }
-tower-http = { version = "0.4.0", features = ["auth", "compression-br", "compression-gzip", "cors", "set-header"] }
+tower-http = { version = "0.6.2", features = ["auth", "compression-br", "compression-gzip", "cors", "set-header"] }
 urlencoding = "2.1.3"
+http-body-util = "0.1.2"
+bytes = "1.9.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
