--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ ciborium = "0.2.1"
 clap = { version = "4.4.2", features = ["derive", "env"] }
 colored.workspace = true
 ctrlc = { version = "3.2.1", features = ["termination"] }
+derive_more = "1.0.0"
 dirs = "5.0.0"
 env_logger = "0.11.0"
 futures = "0.3.21"
