--- a/crates/mockcore/Cargo.toml
+++ b/crates/mockcore/Cargo.toml
@@ -14,6 +14,7 @@ rust-version.workspace = true
 base64.workspace = true
 bitcoin.workspace = true
 hex.workspace = true
+ord = { path = "../.."}
 jsonrpc-core = "18.0.0"
 jsonrpc-derive = "18.0.0"
 jsonrpc-http-server = "18.0.0"
