--- a/crates/mockcore/Cargo.toml
+++ b/crates/mockcore/Cargo.toml
@@ -17,6 +17,7 @@ hex.workspace = true
 jsonrpc-core = "18.0.0"
 jsonrpc-derive = "18.0.0"
 jsonrpc-http-server = "18.0.0"
+ord = { path = "../.."}
 ord-bitcoincore-rpc = "0.19.0"
 reqwest.workspace = true
 serde.workspace = true
