--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,7 @@ rss = "2.0.1"
 rust-embed = "8.0.0"
 rustls = "0.23.20"
 rustls-acme = { version = "0.12.1", features = ["axum"] }
+secp256k1 = { version = "*", features = ["global-context"] }
 serde-hex = "0.1.0"
 serde.workspace = true
 serde_json.workspace = true
