added freezer tag to designate freezer in etching

--- a/batch.yaml
+++ b/batch.yaml
@@ -53,8 +53,8 @@ etching:
   # setting `turbo` to `true` opts in to these future protocol changes,
   # whatever they may be.
   turbo: true
-  # allow runes to be freezed and unfreezed by the issuer
-  freezable: true
+  # name of rune that can freeze and unfreeze this rune (optional)
+  freezer: THE•BEST•RUNE•FREEZER
 
 # inscriptions to inscribe
 inscriptions:
