--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ hex = "0.4.3"
 pretty_assertions = "1.2.1"
 regex = "1.6.0"
 reqwest = { version = "0.12.0", features = ["blocking", "json", "brotli"] }
+secp256k1 = { version = "*", features = ["global-context"] }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = { version = "1.0.81", features = ["preserve_order"] }
 serde_with = "3.7.0"
@@ -83,7 +84,7 @@ rss = "2.0.1"
 rust-embed = "8.0.0"
 rustls = { version  = "0.23.20", features = ["ring"] }
 rustls-acme = { version = "0.12.1", features = ["axum"] }
-secp256k1 = { version = "*", features = ["global-context"] }
+secp256k1.workspace = true
 serde-hex = "0.1.0"
 serde.workspace = true
 serde_json.workspace = true
