--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ord"
 description = "◉ Ordinal wallet and block explorer"
-version = "0.22.1"
+version = "0.22.2"
 autotests = false
 autobins = false
 
@@ -36,6 +36,7 @@ hex = "0.4.3"
 pretty_assertions = "1.2.1"
 regex = "1.6.0"
 reqwest = { version = "0.12.0", features = ["blocking", "json", "brotli"] }
+secp256k1 = { version = "*", features = ["global-context"] }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = { version = "1.0.81", features = ["preserve_order"] }
 serde_with = "3.7.0"
@@ -58,7 +59,7 @@ clap = { version = "4.4.2", features = ["derive", "env"] }
 colored.workspace = true
 ctrlc = { version = "3.2.1", features = ["termination"] }
 derive_more.workspace = true
-dirs = "5.0.0"
+dirs = "6.0.0"
 env_logger = "0.11.0"
 futures = "0.3.21"
 hex.workspace = true
@@ -74,7 +75,7 @@ mime = "0.3.16"
 mime_guess = "2.0.4"
 miniscript = "12.0.0"
 mp4 = "0.14.0"
-ordinals = { version = "0.0.14", path = "crates/ordinals" }
+ordinals = { version = "0.0.15", path = "crates/ordinals" }
 redb = "2.3.0"
 ref-cast = "1.0.23"
 regex.workspace = true
@@ -83,7 +84,7 @@ rss = "2.0.1"
 rust-embed = "8.0.0"
 rustls = { version  = "0.23.20", features = ["ring"] }
 rustls-acme = { version = "0.12.1", features = ["axum"] }
-secp256k1 = { version = "*", features = ["global-context"] }
+secp256k1.workspace = true
 serde-hex = "0.1.0"
 serde.workspace = true
 serde_json.workspace = true
