--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ hex = "0.4.3"
 pretty_assertions = "1.2.1"
 regex = "1.6.0"
 reqwest = { version = "0.12.0", features = ["blocking", "json", "brotli"] }
-secp256k1 = { version = "*", features = ["global-context"] }
+secp256k1 = { version = "0.29.1", features = ["global-context"] }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = { version = "1.0.81", features = ["preserve_order"] }
 serde_with = "3.7.0"
