--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,6 +100,7 @@ tokio-stream = "0.1.9"
 tokio-util = {version = "0.7.3", features = ["compat"] }
 tower-http = { version = "0.6.2", features = ["auth", "compression-br", "compression-gzip", "cors", "set-header"] }
 urlencoding = "2.1.3"
+bdk_wallet = "1.1.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
