--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,8 +5,6 @@ on:
     branches:
     - master
   pull_request:
-    branches:
-    - master
 
 defaults:
   run:
@@ -94,6 +92,7 @@ jobs:
         ./bin/forbid
 
     - name: Check for blacklist
+      if: ${{ github.event.pull_request.base.ref == 'master' }}
       run: |
         if [[ -f blacklist.txt ]]; then
           echo "error: found blacklist.txt"
@@ -122,4 +121,15 @@ jobs:
     - uses: Swatinem/rust-cache@v2
 
     - name: Test
+      if: ${{ github.event.pull_request.base.ref == 'master' }}
       run: cargo test --all
+
+    - name: Set up Python
+      if: ${{ github.event.pull_request.base.ref == 'bdk' }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3'
+
+    - name: Test
+      if: ${{ github.event.pull_request.base.ref == 'bdk' }}
+      run: ./bin/test
