--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,7 +73,7 @@ lazy_static = "1.4.0"
 log = "0.4.14"
 mime = "0.3.16"
 mime_guess = "2.0.4"
-minicbor = { version = "2.1.1", features = ["alloc", "derive"] }
+minicbor = { version = "2.1.1", features = ["alloc", "derive", "half"] }
 miniscript = "12.0.0"
 mp4 = "0.14.0"
 ordinals = { version = "0.0.15", path = "crates/ordinals" }
