--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ anyhow = { version = "1.0.90", features = ["backtrace"] }
 axum = { version = "0.8.1", features = ["http2"] }
 axum-server = "0.7.1"
 base64.workspace = true
+bdk_wallet = "1.1.0"
 bip322 = "0.0.10"
 bip39 = "2.0.0"
 bitcoin.workspace = true
@@ -72,7 +73,7 @@ log = "0.4.14"
 mime = "0.3.16"
 mime_guess = "2.0.4"
 minicbor = { version = "2.1.1", features = ["alloc", "derive", "half"] }
-miniscript = "13.0.0"
+miniscript = "12.3.0"
 mp4 = "0.14.0"
 ordinals = { version = "0.0.15", path = "crates/ordinals" }
 redb = "3.1.0"
