Add Opus audio transcoder
This adds opus audio player support to Apple products by detecting if a user is on a mac/iphone/safari and does not have opus audio support, and transcodes client-side to mpeg.

This also shows any embedded Track Illustrations from opus files, and shows a Play button overlay above any audio file.

The new dependency Symphonia is used to extract audio metadata such as the Track Illustration image.

opus-stream-decoder.js is fetched with a checksum and used to transcode opus audio to mpeg for playback on Apple devices.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 /fuzz/coverage
 /fuzz/target
 /ord.log
+/static/opus-stream-decoder.js
+/static/opus-stream-decoder.wasm
 /target
 /test-times.txt
 /tmp
