--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,10 @@ rust-version.workspace = true
 copyright = "The Ord Maintainers"
 maintainer = "The Ord Maintainers"
 
+[build-dependencies]
+reqwest = { version = "0.12.0", features = ["blocking"] }
+sha2 = "0.10"
+
 [workspace]
 members = [".", "crates/*"]
 
@@ -91,6 +95,7 @@ serde_with.workspace = true
 serde_yaml = "0.9.17"
 sha3 = "0.10.8"
 snafu = "0.8.3"
+symphonia = { version = "0.5.4", features = ["flac", "mp3", "vorbis", "wav", "ogg"] }
 sysinfo = "0.38.0"
 tempfile.workspace = true
 tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
